<resources>
    <string name="label_explorer">Explorer</string>

    <string name="mock_location_name">Zihuatanejo, Gro</string>

    <string name="title_select_category">Select category</string>
    <string name="title_hot_sales">Hot Sales</string>
    <string name="title_best_seller">Best Seller</string>
    <string name="title_filter_options">Filter Options</string>
    <string name="title_brand">Brand</string>
    <string name="title_price">Price</string>
    <string name="title_size">Size</string>

    <string name="hint_view_all">view all</string>
    <string name="hint_see_more">see more</string>

    <string name="badge_hint_new">New</string>

    <string name="action_buy_now">Buy now!</string>
    <string name="action_done">Done</string>

</resources>